apps/churchlify/api-v2/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: churchlify-api-v2
  namespace: churchlify
spec:
  selector:
    app: churchlify-api-v2
  ports:
    - port: 80
      targetPort: 3000
