apps/churchlify/api-v2/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: churchlify-api-v2-ingress
  namespace: churchlify
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
    nginx.ingress.kubernetes.io/proxy-next-upstream: "error timeout invalid_header http_502"
    #ADD CORS ANNOTATIONS 👇
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://localhost, http://localhost, http://localhost:8100, https://churchlify.com, https://app.churchlify.com"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS, PATCH"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
spec:
  tls:
    - hosts:
        - v2.api.churchlify.com
      secretName: churchlify-api-v2-tls
  rules:
    - host: v2.api.churchlify.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: churchlify-api-v2 # Must match your Service name
                port:
                  number: 3000 # Match the Service port
